--- a/depression.rmd
+++ b/depression.rmd
@@ -12,7 +12,6 @@ Lägg till Socialstyrelsens rekommendationer.
 
 Före läkemedelsbehandling bör en noggrann klinisk bedömning göras för att undersöka samsjuklighet (tex beroendesyndrom, personlighetssyndrom, ångestsyndrom) och differentialdiagnoser (tex bipolärt syndrom, ångestsyndrom) som kan ha betydelse för behandlingsval.
 
-
 Guidelines on Choice and Selection of Antidepressants for the Management of Depression [@guidelines_antidepressants2016].
 
 Backing into the future: pharmacological approaches to the management of resistant depression [@Cowen2017] "For patients who have failed to respond to two antidepressant trials, augmentation with atypical anti-psychotic drugs, speciﬁcally quetiapine and aripiprazole, has the best evidence for efﬁcacy, though older treatments such as lithium and triiodothyronine still have utility."
@@ -259,6 +258,8 @@ max effektiv dos = där effektvinstan planar ut, optimal dos = balans mellan eff
 
 ### Switching
 
+Se tabell på [psychiatrinet](https://wiki.psychiatrienet.nl/wiki/Main_Page).
+
 ### Vid biverkningar
 
 Byte till annan klass har inget vetenskapligt stöd men är logiskt. Byte inom SSRI-klassen kan fungera. 
@@ -273,7 +274,7 @@ STAR-D
 
 ### Effekt på enskilda depressionssymtom
 
-
+Eriksson et al
 
 ### Biverkningar
 
